--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 
 body{
     font-family: 'Open Sans', sans-serif;
+    color: white;
 }
 
 .container{
@@ -14,7 +15,6 @@ body{
     margin-right: auto;
 }
 .row{
-
     margin-left: -15px;
     margin-right: -15px;
     display: flex;
@@ -42,6 +42,10 @@ body{
     .col-sm-7{
         flex: 0 0 58.3333%;
         max-width: 58.3333;
+    }    
+    .col-sm-5{
+        flex: 0 0 41.6666%;
+        max-width: 41.6666;
     }
     .col-sm-2{
         flex:0 0 16.66%;
