--- a/style_modest.css
+++ b/style_modest.css
@@ -1,24 +1,24 @@
 .modest{
-    padding: 60px 0;
-    color: #292f36;
-}
-
-.modest-title{
-    font-size: 36px;
-    font-weight: bold;
-    margin: 20px 0;
-}
-
-.modest-desctription{
-    margin: 30px 0;
+    padding-bottom: 60px;
     font-size: 16px;
     color: #8d8f92;
     line-height: 20px;
 }
 
-.modest-column2-margin{
-    margin-top: 50px;
+.modest-title{
+    color: #292f36;
+    font-size: 36px;
+    font-weight: bold;
+    margin-top: 80px;
+    margin-bottom: 60px;
 }
+
+
+.modest-desctription{
+    margin-bottom: 30px;
+
+}
+
 
 .modest-frame-social{
     width: 100%;
@@ -36,10 +36,16 @@
     color: white;
     font-size: 24px;
     margin-right: 2px;
+    cursor: pointer;
 }
+
+/* .modest-frame-social>div:hover{
+    background-color: gray;
+} */
 
 .modest-right-size-list-item>li{
     display: flex;
+    margin-bottom: 30px;
 }
 
 .modest-number-square{
@@ -51,9 +57,13 @@
     font-weight: bold;
     color: white;
     text-align: center;
+    flex: 0 0 auto;
+}
+
+.modest-list-item-text-frame{
+    margin-left: 15px;
 }
 
 .modest-list-title{
-    text-transform:uppercase;
-    margin-left: 10px;
+    margin-bottom: 15px;
 }
