--- a/style_modest.css
+++ b/style_modest.css
@@ -14,11 +14,13 @@
     width: 60px;
     height: 60px;
     background-color: #c8cdd0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    /* display: flex; */
+    /* justify-content: center; */
+    /* align-items: center; */
+    text-align: center;
     color: white;
     font-size: 24px;
+    line-height: 60px;
     margin-right: 2px;
     cursor: pointer;
 }
