--- a/style.css
+++ b/style.css
@@ -34,9 +34,6 @@ hr{
     padding-right: 15px;
 }
 
-.to_upcase{
-    text-transform:uppercase;
-}
 
 .col-xs-12{
     flex: 0 0 100%;
@@ -92,6 +89,10 @@ hr{
         flex: 0 0 25%;
         max-width: 25%; 
     }
+    .col-xl-4{
+        flex: 0 0 33.33%;
+        max-width: 33.33%; 
+    }
 }
 
 /* only mobile */
@@ -106,6 +107,7 @@ hr{
 }
 
 .pages-frame{
+    padding-top: 80px;
     padding-bottom: 60px;
     font-size: 16px;
     color: #8d8f92;
@@ -117,6 +119,10 @@ hr{
     font-size: 36px;
     line-height: 100%;
     font-weight: bold;
-    margin-top: 80px;
     margin-bottom: 60px;
+    margin-left: 20px;
+}
+
+.color-white{
+    color: white;
 }
