Added position sticky

--- a/style_header.css
+++ b/style_header.css
@@ -1,6 +1,8 @@
 .header-background {
     background-color: #3b3850;
     padding: 25px 0;
+    position: sticky;
+    top: 0;
 }
 
 .content-header {
