--- a/style.css
+++ b/style.css
@@ -29,6 +29,34 @@ hr{
     text-transform:uppercase;
 }
 
+.buttons{
+    font-family: 'Quattrocento Sans', sans-serif;
+    border-color: white;
+    text-decoration: none;
+    border: 1px solid white;
+    display: block;
+    border-radius: 3px;
+    text-transform:uppercase;
+}
+
+
+.buttons:hover{
+    color:  white;
+    /* border: 1px solid #23b7a4; */
+    background-color: #23b7a4;  
+    border-color: #23b7a4;
+}
+
+.buttons-size{
+    padding-top: 15px;
+    padding-bottom: 15px;
+    text-align: center;
+    width: 120px;
+    color: white;
+    margin-right: 10px;
+    margin-top: 35px;
+}
+
 [class*=col-]{
     padding-left: 15px;
     padding-right: 15px;
