--- a/style_header.css
+++ b/style_header.css
@@ -43,7 +43,6 @@
     flex-grow: 1;
     display: flex;
     align-items: center;
-
 }
 
 .header-input-search>input {
@@ -52,6 +51,7 @@
     background: none;
     border: none;
     width: 100%;
+    color: white;
 }
 
 .header-input-search>input:focus {
