--- a/style_team.css
+++ b/style_team.css
@@ -1,10 +1,12 @@
 .team-face-image{
     width: 260px;
     height: 300px;
-    /* background-repeat: no-repeat; */
+    background-repeat: no-repeat;
     display: flex;
     align-items: center;
     justify-content: center;
+    background-blend-mode: screen;
+
 }
 
 .face-image1{
@@ -22,7 +24,6 @@
 .face-image4{
     background-image: url(blog_pics/image_man_face3.png);
 }
-
 
 .team-face-description-frame{
     width: 260px;
@@ -43,9 +44,6 @@
     width: 50px;
     height: 50px;
     background-color: #3a454d;
-    /* display: flex; */
-    /* justify-content: center; */
-    /* align-items: center; */
     text-align: center;
     color: white;
     font-size: 16px;
@@ -55,10 +53,6 @@
     display: none;
 }
 
-/* .team-face-image:hover{
-    display: block;
-    border: 2px solid red;
-} */
 .team-frame{
     margin: 0 auto 10px;
     width: fit-content;
@@ -67,10 +61,15 @@
 .team-frame:hover>.team-face-image>div {
     display: block;
 }
+
 .team-frame:hover>.team-face-description-frame{
     background-color: #3a454d;
 }
 
 .team-frame:hover:hover>.team-face-description-frame>div{
     color: white;
+}
+
+.team-frame:hover>.team-face-image{
+    background-color: rgba(255, 255, 255, 0.4);
 }
