Added pages features and map

--- a/style.css
+++ b/style.css
@@ -11,22 +11,10 @@ hr{
     color: #dde1e4;
 }
 
-.container{
-    width: 100%;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-left: auto;
-    margin-right: auto;
-}
-.row{
-    margin-left: -15px;
-    margin-right: -15px;
-    display: flex;
-    flex-wrap: wrap;
-}
-
 [class*=-title]{
     text-transform:uppercase;
+    font-family: 'Quattrocento Sans', sans-serif;
+    font-weight: bold;
 }
 
 .buttons{
@@ -38,7 +26,6 @@ hr{
     border-radius: 3px;
     text-transform:uppercase;
 }
-
 
 .buttons:hover{
     color:  white;
@@ -57,88 +44,10 @@ hr{
     margin-top: 35px;
 }
 
-[class*=col-]{
-    padding-left: 15px;
-    padding-right: 15px;
-}
-
-
-.col-xs-12{
-    flex: 0 0 100%;
-    max-width: 100%;
-}
-
-.col-xs-6{
-    flex: 0 0 50%;
-}
-
-/* tablet */
-@media (min-width:768px){
-    .container{
-        max-width: 720px;
-    }
-    .col-sm-3{
-        flex: 0 0 25%;
-        max-width: 25%;
-    }
-    .col-sm-7{
-        flex: 0 0 58.3333%;
-        max-width: 58.3333;
-    }    
-    .col-sm-5{
-        flex: 0 0 41.6666%;
-        max-width: 41.6666;
-    }
-    .col-sm-2{
-        flex:0 0 16.66%;
-        max-width: 16.66%;
-    }
-
-    .col-sm-6{
-        flex: 0 0 50%;
-        max-width: 50%;    
-    }
-}
-
-/* laptop */
-@media (min-width:992px){
-    .container{
-        max-width: 960px;
-    }
-}
-
-/* desktop */
-@media (min-width:1200px){
-    .container{
-        max-width: 1170px;
-    }
-
-    .col-xl-3{
-        flex: 0 0 25%;
-        max-width: 25%; 
-    }
-    .col-xl-4{
-        flex: 0 0 33.33%;
-        max-width: 33.33%; 
-    }
-}
-
-/* only mobile */
-@media(max-width:767px){
-    .col-xs-hidden{
-        display: none;
-    }
-    .logo{
-        display: flex;
-        justify-content: center;
-    }
-}
-
 .pages-frame{
     padding-top: 80px;
     padding-bottom: 60px;
     font-size: 16px;
-    color: #8d8f92;
     line-height: 20px;
 }
 
@@ -163,3 +72,11 @@ hr{
 .color-white{
     color: white;
 }
+
+/* Set the size of the div element that contains the map */
+#map {
+    height: 400px;
+    /* The height is 400 pixels */
+    width: 100%;
+    /* The width is the width of the web page */
+  }
