--- a/style.css
+++ b/style.css
@@ -1,40 +1,40 @@
-*{
+* {
     box-sizing: border-box;
 }
 
-body{
+body {
     font-family: 'Open Sans', sans-serif;
     color: white;
 }
 
-hr{
+hr {
     color: #dde1e4;
 }
 
-[class*=-title]{
-    text-transform:uppercase;
+[class*=-title] {
+    text-transform: uppercase;
     font-family: 'Quattrocento Sans', sans-serif;
     font-weight: bold;
 }
 
-.buttons{
+.buttons {
     font-family: 'Quattrocento Sans', sans-serif;
     border-color: white;
     text-decoration: none;
     border: 1px solid white;
     display: block;
     border-radius: 3px;
-    text-transform:uppercase;
+    text-transform: uppercase;
 }
 
-.buttons:hover{
-    color:  white;
+.buttons:hover {
+    color: white;
     /* border: 1px solid #23b7a4; */
-    background-color: #23b7a4;  
+    background-color: #23b7a4;
     border-color: #23b7a4;
 }
 
-.buttons-size{
+.buttons-size {
     padding-top: 15px;
     padding-bottom: 15px;
     text-align: center;
@@ -44,14 +44,14 @@ hr{
     margin-top: 35px;
 }
 
-.pages-frame{
+.pages-frame {
     padding-top: 80px;
     padding-bottom: 60px;
     font-size: 16px;
     line-height: 20px;
 }
 
-.pages-title{
+.pages-title {
     display: flex;
     color: #292f36;
     font-size: 36px;
@@ -60,7 +60,7 @@ hr{
     margin-bottom: 60px;
 }
 
-.pages-title::before{
+.pages-title::before {
     content: "";
     display: block;
     width: 10px;
@@ -69,14 +69,69 @@ hr{
     margin-right: 10px;
 }
 
-.color-white{
+.color-white {
     color: white;
 }
 
-/* Set the size of the div element that contains the map */
-#map {
-    height: 400px;
-    /* The height is 400 pixels */
-    width: 100%;
-    /* The width is the width of the web page */
-  }
+@media (max-width:767px) {
+    .nav-mobile-menu {
+        width: 15px;
+        height: 15px;
+        position: relative;
+    }
+
+    .nav-mobile-menu span {
+        height: 1px;
+        background-color: white;
+        position: absolute;
+        left: 0;
+        right: 0;
+        transition: .25s ease-in-out;
+
+    }
+
+    .nav-mobile-menu span:first-child {
+        top: 3px;
+    }
+
+    .nav-mobile-menu span:nth-child(2) {
+        top: 7px;
+    }
+
+    .nav-mobile-menu span:last-child {
+        bottom: 3px;
+    }
+
+    .nav-mobile-menu.active-menu span:first-child {
+        top:50%;
+        transform: rotate(45deg);
+    }
+    .nav-mobile-menu.active-menu span:nth-child(2) {
+        top:50%;
+        transform: rotate(-45deg);
+    }
+    .nav-mobile-menu.active-menu span:last-child {
+        transform: scale(0);
+    }
+
+    .navigation {
+        opacity: 0;
+        visibility: hidden;
+        position: fixed;
+        top:0;
+        right: 0;
+        bottom: 0;
+        max-width: 280px;
+        width: 280px;
+        transform: translateX(150%);
+    }
+
+    .navigation.active-menu {
+        opacity: 1;
+        visibility: visible;
+        top:50px;
+        padding: 25px;
+        transform: translateX(0);
+    }
+
+}
