Added the mobile menu with listener

--- a/style_modal.css
+++ b/style_modal.css
@@ -1,4 +1,5 @@
-.modal {
+.modal,
+.close-nav-menu {
     display: none;
     position: fixed;
     top: 0;
@@ -6,7 +7,7 @@
     width: 100%;
     height: 100%;
     z-index: 100;
-    background-color: rgba(0, 0, 0, 0.55);
+    background-color: rgba(0, 0, 0, 0.3);
 }
 .modal-block {
     width: 300px;
