--- a/style_header.css
+++ b/style_header.css
@@ -85,12 +85,86 @@
         flex-basis: 100%;
     }
 
-    .header-menu{
-        overflow-x: scroll;
-    }
-
     [class^="content"] {
         width: 320px;
     }
+}
 
+.logo-frame{
+    display: flex;
+    justify-content: space-between;
+}
+
+@media (max-width:767px) {
+    .nav-mobile-menu {
+        width: 15px;
+        height: 15px;
+        position: relative;
+        cursor: pointer;
+        z-index: 102;
+    }
+
+    .nav-mobile-menu span {
+        height: 1px;
+        background-color: white;
+        position: absolute;
+        left: 0;
+        right: 0;
+        transition: .25s ease-in-out;
+    }
+
+    .nav-mobile-menu span:first-child {
+        top: 3px;
+    }
+
+    .nav-mobile-menu span:nth-child(2) {
+        top: 7px;
+    }
+
+    .nav-mobile-menu span:last-child {
+        bottom: 3px;
+    }
+
+    .nav-mobile-menu.active-menu span:first-child {
+        top:50%;
+        transform: rotate(45deg);
+    }
+    
+    .nav-mobile-menu.active-menu span:nth-child(2) {
+        top:50%;
+        transform: rotate(-45deg);
+    }
+
+    .nav-mobile-menu.active-menu span:last-child {
+        transform: scale(0);
+    }
+
+    .navigation {
+        opacity: 0;
+        visibility: hidden;
+        position: fixed;
+        top:0;
+        right: 0;
+        bottom: 0;
+        max-width: 280px;
+        width: fit-content;
+        transform: translateX(150%);
+        background-color: #3b3850;
+        height: fit-content;
+        z-index: 102;
+    }
+
+    .navigation.active-menu {
+        opacity: 1;
+        visibility: visible;
+        top:50px;
+        padding: 15px;
+        transform: translateX(0);
+    }
+
+    
+    .navigation.active-menu>.header-menu {
+        flex-direction: column;
+    }
+    
 }
